--- a/SudokuUI/SudokuUI.csproj
+++ b/SudokuUI/SudokuUI.csproj
@@ -45,6 +45,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="save_load_dialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="save_load_dialog.Designer.cs">
+      <DependentUpon>save_load_dialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Sudoku.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -66,6 +72,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="save_load_dialog.resx">
+      <DependentUpon>save_load_dialog.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
