--- a/SudokuUI/SudokuUI.csproj
+++ b/SudokuUI/SudokuUI.csproj
@@ -67,6 +67,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Lib.cs" />
     <Compile Include="SettingsMenu.cs">
       <SubType>Form</SubType>
     </Compile>
