--- a/SudokuUI/SudokuUI.csproj
+++ b/SudokuUI/SudokuUI.csproj
@@ -67,6 +67,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AboutPage.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AboutPage.Designer.cs">
+      <DependentUpon>AboutPage.cs</DependentUpon>
+    </Compile>
     <Compile Include="Lib.cs" />
     <Compile Include="SettingsMenu.cs">
       <SubType>Form</SubType>
@@ -89,6 +95,15 @@
     <Compile Include="SudokuGenerator.Designer.cs">
       <DependentUpon>SudokuGenerator.cs</DependentUpon>
     </Compile>
+    <Compile Include="SudokuViewer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SudokuViewer.Designer.cs">
+      <DependentUpon>SudokuViewer.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="AboutPage.resx">
+      <DependentUpon>AboutPage.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainWindowForm.resx">
       <DependentUpon>MainWindowForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -106,6 +121,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="SudokuGenerator.resx">
       <DependentUpon>SudokuGenerator.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SudokuViewer.resx">
+      <DependentUpon>SudokuViewer.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
